--- a/src/components/Sections/StepsSection/StepsSection.module.css
+++ b/src/components/Sections/StepsSection/StepsSection.module.css
@@ -38,3 +38,9 @@
   -webkit-text-fill-color: transparent;
   line-height: var(--leading-tight);
 }
+
+@media (width >= 48rem /* 768px */) {
+  .card {
+    border-left: none;
+  }
+}
