--- a/src/components/Sections/IntegrationRoadmapSection/IntegrationRoadmapSection.module.css
+++ b/src/components/Sections/IntegrationRoadmapSection/IntegrationRoadmapSection.module.css
@@ -1,11 +1,9 @@
 .listContainer {
-  margin-left: calc(-1 * (100vw - 100%) / 2);
-  width: 100vw;
   margin-block: 4.6rem;
 }
 .listContainer::after {
   position: absolute;
-  content: "";
+  content: none;
   top: 50%;
   width: 100%;
   height: 1px;
@@ -14,17 +12,13 @@
 
 .list {
   counter-reset: list 0;
-  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .list > li {
   position: relative;
   counter-increment: list;
-  border-left: 2px dotted var(--color-gray-100);
 }
-.list > li:first-child {
-  margin-left: 2.3rem;
-}
+
 .list > li::before {
   content: counter(list);
   display: flex;
@@ -35,29 +29,57 @@
   height: 4.6rem;
   font-size: var(--text-5xl);
   font-weight: 600;
-  background: conic-gradient(from 180.51deg at 50% 50%, var(--background) 0deg, #683DA1 70.74deg, #D642F2 168.37deg, #683DA1 275.4deg, var(--background) 360deg);
+  background: conic-gradient(from 180.51deg at 50% 50%, var(--background) 0deg, #683da1 70.74deg, #d642f2 168.37deg, #683da1 275.4deg, var(--background) 360deg);
   color: var(--color-primary-foreground);
-  position: absolute;
-}
-
-.top {
-  grid-row: 1;
-}
-.top::before {
-  top: -2.3rem;
-  left: -2.3rem;
-}
-
-.bottom {
-  grid-row: 2;
-}
-.bottom::before {
-  bottom: -2.3rem;
-  left: -2.3rem;
 }
 
 .list > li p {
-  width: 50%;
-  margin-inline: auto;
   padding-block: 12px;
+}
+
+@media (width >= 48rem /* 768px */) {
+  .listContainer {
+    margin-left: calc(-1 * (100vw - 100%) / 2);
+    width: 100vw;
+  }
+  .listContainer::after {
+    content: "";
+  }
+
+  .list > li {
+    border-left: 2px dotted var(--color-gray-100);
+  }
+  .list > li::before {
+    position: absolute;
+  }
+  .list > li p {
+    width: 60%;
+    z-index: 1;
+    margin-inline: auto;
+  }
+
+  .list > li:first-child {
+    margin-left: 2.3rem;
+  }
+
+  .top {
+    grid-row: 1;
+  }
+  .bottom {
+    grid-row: 2;
+  }
+  .top::before {
+    top: -2.3rem;
+    left: -2.3rem;
+  }
+  .bottom::before {
+    bottom: -2.3rem;
+    left: -2.3rem;
+  }
+}
+
+@media (width >= 64rem /* 1024px */) {
+  .list > li p {
+    width: 50%;
+  }
 }
